--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.CrytoApplication" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.CryptoApplication" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.CrytoApplication" parent="Base.Theme.CrytoApplication" />
+    <style name="Theme.CryptoApplication" parent="Base.Theme.CryptoApplication" />
 </resources>
