--- a/features/home/src/main/res/layout/fragment_crypto.xml
+++ b/features/home/src/main/res/layout/fragment_crypto.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="8dp"
         android:textColor="@color/white"
         android:textStyle="bold"
+        android:textSize="21sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Favorites" />
@@ -34,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:textColor="@color/white"
+        android:textSize="21sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rvFavorites"
@@ -44,11 +46,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintStart_toStartOf="@id/tvPairs"
         app:layout_constraintTop_toBottomOf="@id/tvPairs"
-        tools:listitem="@layout/item_favorites" />
+        tools:listitem="@layout/item_crypto" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
