--- a/features/home/src/main/res/values/color.xml
+++ b/features/home/src/main/res/values/color.xml
@@ -6,5 +6,6 @@
     <color name="gray">#8F98A6</color>
     <color name="black">#000000</color>
     <color name="green">#4CAF50</color>
+    <color name="red">#D6301E</color>
 
 </resources>
