feat: add adapter classes & data item & base classes

--- a/features/home/src/main/res/layout/item_crypto.xml
+++ b/features/home/src/main/res/layout/item_crypto.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/black"
+    tools:background="@color/black"
     android:orientation="vertical"
     android:padding="8dp">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivStar"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:src="@drawable/baseline_star"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -44,7 +44,8 @@
         android:id="@+id/tvLast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
+        android:maxLength="5"
+        android:layout_marginEnd="8dp"
         android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/tvDailyPercent"
@@ -53,6 +54,7 @@
         tools:text="Last" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvDaily"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/gray"
