--- a/features/home/src/main/res/layout/fragment_crypto.xml
+++ b/features/home/src/main/res/layout/fragment_crypto.xml
@@ -10,10 +10,10 @@
         android:id="@+id/tvFavorites"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/dimen_8_sp"
+        android:layout_marginTop="@dimen/dimen_16_dp"
         android:textColor="@color/text_color"
-        android:textSize="21sp"
+        android:textSize="@dimen/dimen_21_sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,10 +34,10 @@
         android:id="@+id/tvPairs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="@dimen/dimen_8_sp"
+        android:layout_marginTop="@dimen/dimen_24_sp"
         android:textColor="@color/text_color"
-        android:textSize="21sp"
+        android:textSize="@dimen/dimen_21_sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rvFavorites"
@@ -47,7 +47,7 @@
         android:id="@+id/rvCryptoList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/dimen_16_sp"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
