fix: fix writing styles & hide baseUrl

--- a/features/home/src/main/res/layout/item_crypto.xml
+++ b/features/home/src/main/res/layout/item_crypto.xml
@@ -20,10 +20,10 @@
         android:id="@+id/tvPairName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="@dimen/dimen_12_dp"
         android:textColor="@color/white"
-        android:textSize="18sp"
-        android:textStyle="italic"
+        android:textSize="@dimen/dimen_18_sp"
+        android:fontFamily="@font/sherif"
         app:layout_constraintBottom_toBottomOf="@id/ivStar"
         app:layout_constraintEnd_toStartOf="@id/tvLast"
         app:layout_constraintHorizontal_bias="0"
@@ -57,7 +57,9 @@
         android:id="@+id/tvDaily"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/sherif"
         android:textColor="@color/gray"
+        android:textSize="@dimen/dimen_14_sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvDailyPercent"
         tools:text="Volume + NumeratorName" />
