--- a/features/home/src/main/res/values/dimens.xml
+++ b/features/home/src/main/res/values/dimens.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="dimen_21_sp">21sp</dimen>
+    <dimen name="dimen_12_dp">12dp</dimen>
     <dimen name="dimen_16_dp">16dp</dimen>
+    <dimen name="dimen_18_sp">18dp</dimen>
+
     <dimen name="dimen_8_sp">8dp</dimen>
-    <dimen name="dimen_24_sp">24dp</dimen>
+    <dimen name="dimen_12_sp">12sp</dimen>
+    <dimen name="dimen_14_sp">14sp</dimen>
     <dimen name="dimen_16_sp">16dp</dimen>
+    <dimen name="dimen_21_sp">21sp</dimen>
+    <dimen name="dimen_24_sp">24dp</dimen>
+
 </resources>
